# doufu

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: build-windows.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  types.rs
src/lib/: audio.ts  regions.ts  types.ts  utils.ts
src/lib/components/: BottomBar.svelte  HeaderBar.svelte  ImageThumbs.svelte  ImageViewer.svelte  MessageBanner.svelte  PdfViewer.svelte  RegionPanel.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/styles/: main.css
